<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/ProductInfoLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#BF000000">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="308dp"
...
        android:textColor="#C8C6C6"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <Button
        android:id="@+id/button22"
        android:layout_width="204dp"
        android:layout_height="53dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FF0000"
        android:onClick="deleteProduct"
        android:text="@string/ürünüsil_but"
...
